// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b27 <http://my-vault.org/property/YWdl> \\"37\\", \\"42\\" ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnHeader splitOnHeader true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b28 dot:contains [
		dot:contains [
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	] .

"
`;

exports[`splitOnHeader splitOnHeader true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b33 dot:contains [
		schema:name \\"People\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			schema:name \\"Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			schema:name \\"Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	] .

<http://my-vault.org/property/YWdl> schema:name \\"age\\" .

<http://my-vault.org/property/bmFtZQ==> schema:name \\"name\\" .

"
`;

exports[`splitOnId splitOnId false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://my-vault.org/note/QWxpc29u> dot:wikiPath \\"Alison\\" .

_:b20 <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29u>, <http://my-vault.org/note/QWxpY2U=> .

<http://my-vault.org/note/QWxpY2U=> dot:wikiPath \\"Alice\\" .

"
`;

exports[`splitOnId splitOnId true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b21 dot:contains [
		<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29u> ;
	], [
		<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2U=> ;
	] .

<http://my-vault.org/note/QWxpc29u> dot:wikiPath \\"Alison\\" .

<http://my-vault.org/note/QWxpY2U=> dot:wikiPath \\"Alice\\" .

"
`;

exports[`splitOnId splitOnId true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b24 dot:contains [
		schema:name \\"Alice\\" ;
		<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29u> ;
	], [
		schema:name \\"Alison\\" ;
		<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2U=> ;
	] .

<http://my-vault.org/note/QWxpc29u> dot:wikiPath \\"Alison\\" .

<http://my-vault.org/property/Zm9hZjprbm93cw==> schema:name \\"foaf:knows\\" .

<http://my-vault.org/note/QWxpY2U=> dot:wikiPath \\"Alice\\" .

"
`;

exports[`splitOnTag splitOnTag false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b13 dot:tag \\"person\\" ;
	<http://my-vault.org/property/YWdl> \\"37\\", \\"42\\" ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b14 dot:contains [
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b17 dot:contains [
		schema:name \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		schema:name \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" .

<http://my-vault.org/property/YWdl> schema:name \\"age\\" .

<http://my-vault.org/property/bmFtZQ==> schema:name \\"name\\" .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b4 dot:contains [
		<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" ;
		dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjI=> ;
	], [
		<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" ;
		dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMg> ;
	], [
		<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" ;
		dot:related <http://my-vault.org/note/VW5rbm93biNeMQ==> ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b12 <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9i> dot:wikiPath \\"Bob\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2U=> .

<http://my-vault.org/note/QWxpY2U=> dot:wikiPath \\"Alice\\" .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b2 <http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/Li4vaG91c2VzL2ltZy5wbmc=> ;
	dot:related <http://my-vault.org/note/bGluayAx>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDE=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIA==>, <http://my-vault.org/note/cHJvdG9jb2w=>, <https://example2.com> .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b8 <http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\" .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b9 dot:tag \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;
